
2016-03-26  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (find_func_ext_name), tree.h: created to find external name
	  of functions from a given prototype. Also created struct
	  (cb_func_prototype).
	* tree.c (cb_build_repo_func_prototype): dropped repo_ from name.
	* parser.y, tree.c (cb_build_func_prototype): made FUNCTION-ID
	  generate implicit REPOSITORY entry to permit recursion.
	* parser.y: corrected spelling: setup_* to set_up_*.
	* scanner.l: moved code for finding program based on program-name to
	  separate function (cb_find_defined_program).
	* typeck.c: stopped function-names being converted to upper-case.

2016-03-25  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, scanner.l, tree.c, tree.h, typeck.c: added checks for
	  redefinition of program and function-prototype names. (See bugs #212
	  and #205).
	* parser.y: moved duplicated PROGRAM/FUNCTION-ID and END PROGRAM/
	  FUNCTION code into functions.

2016-03-23  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: added check that BY VALUE formal parameters are not ANY
	  LENGTH (see bug #219).

2016-03-19  Brian Tiffin <btiffin@gnu.org>

	* codegen.c, reserved.c, parser.y, tree.h: Allow for
	  PROCEDURE DIVISION RETURNING OMITTED and CALL ... RETURNING NOTHING

2016-03-18  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c, config.c, cobc.h: added ability to specify aliases for
	  default reserved words (Wish List #112).

2016-03-09  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c, cobc.h: enhanced reserved conf. option to allow
	  specification of context-sensitive words.

2016-03-05  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: disabled formal BY VALUE parameters, pending fix of bug
	  #109.

2016-02-28  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, config.c, reserved.c: added reserved and specify-all-
	  reserved options to let configs specify all the reserved words. Also
	  removed now redundant cobol85-reserved option.