@@ -1,18 +1,18 @@
 ## Copyright (C) 2007-2012, 2014-2015 Free Software Foundation, Inc.
 ## Written by Roger While, Simon Sobisch, Edward Hart
-## 
+##
 ## This file is part of GnuCOBOL.
-## 
+##
 ## The GnuCOBOL compiler is free software: you can redistribute it
 ## and/or modify it under the terms of the GNU General Public License
 ## as published by the Free Software Foundation, either version 3 of the
 ## License, or (at your option) any later version.
-## 
+##
 ## GnuCOBOL is distributed in the hope that it will be useful,
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ## GNU General Public License for more details.
-## 
+##
 ## You should have received a copy of the GNU General Public License
 ## along with GnuCOBOL.  If not, see <http://www.gnu.org/licenses/>.
 
@@ -75,7 +75,7 @@ AT_DATA([prog.cob], [
        DATA DIVISION.
        LINKAGE SECTION.
        01  ret PIC 9(4).
-       
+
        PROCEDURE DIVISION RETURNING ret.
            MOVE 100 TO ret
            .
@@ -87,21 +87,21 @@ AT_DATA([prog.cob], [
        DATA DIVISION.
        LINKAGE SECTION.
        01  ret PIC 9(5).
-       
+
        PROCEDURE DIVISION RETURNING ret.
            MOVE 1 TO ret
            .
        END FUNCTION z.
-           
+
        IDENTIFICATION DIVISION.
        PROGRAM-ID. testing.
 
        ENVIRONMENT DIVISION.
        CONFIGURATION SECTION.
        REPOSITORY.
-           FUNCTION y AS "x"
-           FUNCTION z.          
-           
+           FUNCTION y AS "y"
+           FUNCTION z
+           .
        PROCEDURE DIVISION.
            DISPLAY FUNCTION y
            DISPLAY FUNCTION z
@@ -273,7 +273,7 @@ AT_DATA([prog.cob], [
 
            DISPLAY FUNCTION INTEGER-OF-FORMATTED-DATE ( Time-Format, 1)
            END-DISPLAY
- 
+
            DISPLAY FUNCTION SECONDS-FROM-FORMATTED-TIME
                ( Date-Format, 1)
            END-DISPLAY
